--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deasync": "^0.1.9",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
+    "googleplaces": "^0.6.1",
     "milligram": "^1.3.0",
     "mongoose": "^4.8.1",
     "mongoose-double": "0.0.1",
